# GBB

./: .gitignore  README.md  main.py  manual.md  prepromt.txt  prompt.txt  pyproject.toml  requirements.txt  test_debug.py  test_theme_changes.py
.kiro/specs/p2p-encrypted-bbs/: design.md  requirements.md  tasks.md
config/: README.md  __init__.py  config.json  config_manager.py  config_manager.py.bak  settings.yaml
core/: __init__.py  board_image_manager.py  crypto_manager.py  db_manager.py  debug_utils.py  error_handler.py  file_manager.py  mdns_service.py  network_manager.py  notification_manager.py  qt_asyncio.py  sync_manager.py  vector_clock.py
docs/: __init__.py  file_attachment_usage.md  task_11_summary.md  task_13_summary.md  task_14_summary.md  task_15_summary.md  task_9_1_summary.md  ui_structure.md
logic/: __init__.py  board_manager.py  chat_manager.py  moderation_manager.py  thread_manager.py
models/: __init__.py  database.py
tests/: __init__.py  test_chat_ui.py  test_config.py  test_crypto.py  test_database.py  test_file_manager.py  test_file_transfer.py  test_handshake.py  test_logic.py  test_mdns.py  test_network.py  test_notification.py  test_sync.py
ui/: __init__.py  about_page.py  board_detail_page.py  board_list_page.py  chat_list_page.py  chat_widget.py  demo_main_window.py  demo_peer_settings.py  hover_card.py  login_window.py  main_window.py  message_detail_page.py  peer_monitor_page.py  post_view_page.py  private_chats_page.py  settings_page.py  theme_utils.py  thread_list_page.py  welcome_page.py
